--- a/dynamic-templates/task1/app/templates/inflation.html
+++ b/dynamic-templates/task1/app/templates/inflation.html
@@ -17,8 +17,42 @@
       <div class="row">
         <h1 class="col s12 red lighten-5">Инфляция в России</h1>
         <ul class="col s12 m8">
+            <table class="bordered">
+                <thead>
+                    {% for column in columns %}
+                        {% if column == 'Суммарная'%}
+                            <th class="grey darken-1">{{ column }}</th>
+                        {% else %}
+                            <th class="">{{ column }}</th>
+                        {% endif %}
+                    {% endfor %}
+                </thead>
+                <tbody>
+                    {% for row in inflation %}
+                        <tr>
+                            {% for key, value in row.items %}
+                                {% if key == 'Суммарная' %}
+                                    <td class="grey darken-1">{{ value }}</td>
+                                {% elif value < 0 %}
+                                    <td class="green darken-2">{{ value }}</td>
+                                {% elif value < 1 %}
+                                    <td class="">{{ value }}</td>
+                                {% elif value < 2 %}
+                                    <td class="red lighten-4">{{ value }}</td>
+                                {% elif  value <= 5 %}
+                                    <td class="red lighten-1">{{ value }}</td>
+                                {% elif value > 5 %}
+                                    <td class="red darken-4">{{ value }}</td>
+                                {% else %}
+                                    <td class="">{{ value }}</td>
+                                {% endif %}
 
-        <!-- Ваша логика -->
+                            {% endfor %}
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+       <!-- Ваша логика -->
 
         </ul>
       </div>
