task1/views complete v3 delete garbage

--- a/dynamic-templates/task1/app/templates/inflation.html
+++ b/dynamic-templates/task1/app/templates/inflation.html
@@ -15,7 +15,7 @@
   <body>
     {% block content %}
       <div class="row">
-        <h1 class="col s12 red lighten-5">Инфляция в России</h1>
+        <h1 class="col s12 ">Инфляция в России</h1>
         <ul class="col s12 m8">
             <table class="bordered">
                 <thead>
