--- a/dynamic-templates/task2/app/templates/app/about.html
+++ b/dynamic-templates/task2/app/templates/app/about.html
@@ -5,6 +5,9 @@
         О компании
     {% endblock %}
 
+    {% block activate_about %}
+        active
+    {% endblock %}
 
     {% block content %}
         <div class="row">
