--- a/dynamic-templates/task2/app/templates/app/contacts.html
+++ b/dynamic-templates/task2/app/templates/app/contacts.html
@@ -5,6 +5,9 @@
         Где можно посмотреть и купить
     {% endblock %}
 
+    {% block activate_contacts %}
+        active
+    {% endblock %}
 
     {% block content %}
         <div class="row">
