--- a/dynamic-templates/task2/app/templates/app/examples.html
+++ b/dynamic-templates/task2/app/templates/app/examples.html
@@ -4,7 +4,10 @@
     {% block title %}
         Каталог компьютеров Apple
     {% endblock %}
-
+    
+    {% block activate_examles %}
+        active
+    {% endblock %}
 
     {% block content %}
         <div class="row">
