--- a/dynamic-templates/task2/app/templates/app/base.html
+++ b/dynamic-templates/task2/app/templates/app/base.html
@@ -24,9 +24,9 @@
         <a href="{% url 'home' %}" class="brand-logo">
         Компьютеры</a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="{% url 'examples' %}">Примеры</a></li>
-          <li><a href="{% url 'contacts' %}">Контакты</a></li>
-          <li><a href="{% url 'about' %}">О проекте</a></li>
+          <li class="{% block activate_examles %}{% endblock %}"><a href="{% url 'examples' %}">Примеры</a></li>
+          <li class="{% block activate_contacts %}{% endblock %}"><a href="{% url 'contacts' %}">Контакты</a></li>
+          <li class="{% block activate_about %}{% endblock %}"><a href="{% url 'about' %}">О проекте</a></li>
         </ul>
       </div>
     </nav>
