--- a/dynamic-templates/task2/app/templates/app/about.html
+++ b/dynamic-templates/task2/app/templates/app/about.html
@@ -9,15 +9,10 @@
         active
     {% endblock %}
 
-    {% block content %}
-        <div class="row">
-          <div class="col s12">
-            <h1 class="col s12">О компании</h1>
+    {% block content_title %}
+        О компании
+    {% endblock %}
 
-            <div class="col s12 m8">
-                <div>Производим компьютеры с 1976 года
-                </div>
-            </div>
-          </div>
-        </div>
+    {% block content %}
+        Производим компьютеры с 1976 года
     {% endblock content %}
