--- a/dynamic-templates/task2/app/templates/app/contacts.html
+++ b/dynamic-templates/task2/app/templates/app/contacts.html
@@ -9,16 +9,13 @@
         active
     {% endblock %}
 
-    {% block content %}
-        <div class="row">
-          <div class="col s12">
-            <h1 class="col s12">Где можно посмотреть и купить</h1>
 
-            <div class="col s12 m8">
-                <div>Ждем вас по адресу
-                    <b>Кремниевая долина, Купертино, Калифорния</b>
-                </div>
-            </div>
-          </div>
-        </div>
+
+    {% block content_title %}
+        Где можно посмотреть и купить
+    {% endblock %}
+
+    {% block content %}
+        Ждем вас по адресу
+        <b>Кремниевая долина, Купертино, Калифорния</b>
     {% endblock content %}
