--- a/dynamic-templates/task2/app/templates/app/examples.html
+++ b/dynamic-templates/task2/app/templates/app/examples.html
@@ -4,18 +4,18 @@
     {% block title %}
         Каталог компьютеров Apple
     {% endblock %}
-    
+
     {% block activate_examles %}
         active
     {% endblock %}
 
+
+    {% block content_title %}
+         Каталог компьютеров Apple
+    {% endblock %}
+
     {% block content %}
-        <div class="row">
-          <div class="col s12">
-            <h1 class="col s12">Каталог компьютеров Apple</h1>
-            {% for item in items %}
-                {% include 'app/includes/example_card.html' %}
-            {% endfor %}
-          </div>
-        </div>
+        {% for item in items %}
+           {% include 'app/includes/example_card.html' %}
+        {% endfor %}
     {% endblock content %}
