--- a/dynamic-templates/task1/app/templates/inflation.html
+++ b/dynamic-templates/task1/app/templates/inflation.html
@@ -19,7 +19,7 @@
         <ul class="col s12 m8">
             <table class="bordered">
                 <thead>
-                    {% for fieldname in reader.fieldnames %}
+                    {% for fieldname in reader.0.keys %}
                         {% if fieldname == "Суммарная" %}
                             <th class="">Всего</th>
                         {% else %}
@@ -28,15 +28,19 @@
                     {% endfor %}
                 </thead>
                 <tbody>
-                    <tr>
-                        {% for r in reader %}
-                            <td>111 {{ r.Год }}</td>
-                        {% endfor %}
-                    </tr>
+                    {% for row in reader %}
+                        <tr>
+                           {% for stat in row.values %}
+                               {% if stat == '' %}
+                                    <td>-</td>
+                               {% else %}
+                                    <td>{{ stat }}</td>
+                               {% endif%}
+                           {% endfor %}
+                        </tr>
+                    {% endfor %}
                 </tbody>
             </table>
-       <!-- Ваша логика -->
-
         </ul>
       </div>
     {% endblock %}
