--- a/databases/phone_comparison/static/css/style.css
+++ b/databases/phone_comparison/static/css/style.css
@@ -2,3 +2,13 @@
     margin-top: 30px;
     margin-bottom: 70px;
 }
+
+.phone  {
+    display: block;
+    background-color: #d1c4e9;
+    width: auto;
+}
+
+.container    {
+    background-color: blue;
+}
