--- a/databases/phone_comparison/templates/compression_phones.html
+++ b/databases/phone_comparison/templates/compression_phones.html
@@ -1,25 +1,26 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% for phone in phones %}
 
+<div class="container">
     <div class="row">
-        <div class="col s6 m6">
-        <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-            <span class="card-title">{{ phone.name }}</span>
-                <p> Экран: {{ phone.parametrs }}</p>
-                <p> Батарейка: {{ phone.scan_eye }}</p>
-                <p> Камера: {{ phone.parametrs.battery }}</p>
-                <p> Память: {{ phone.memory }}</p>
-            </div>
-            <div class="card-action">
-                <a href="#">This is a link</a>
-                <a href="#">This is a link</a>
-            </div>
+        <div class="col-sm">
+            <select class="custom-select custom-select-lg col-sm">
+                <option selected>Open this select menu</option>
+                {% for phone in phones %}
+                <option value="{{ phone.id }}">{{ phone.brand }} {{ phone.model_name }}</option>
+                {% endfor %}
+            </select>
         </div>
+        <div class="col-sm">
+            <select class="custom-select custom-select-lg col-sm">
+                <option selected>Open this select menu</option>
+                {% for phone in phones %}
+                <option value="{{ phone.id }}">{{ phone.brand }} {{ phone.model_name }}</option>
+                {% endfor %}
+            </select>
         </div>
     </div>
+</div>
 
-    {% endfor %}
 {% endblock %}
