add show all phones

--- a/databases/work_with_database/templates/catalog.html
+++ b/databases/work_with_database/templates/catalog.html
@@ -10,10 +10,29 @@
 
         <div class="sort-block">
             {# Здесь должен быть раздел с сортировкой #}
+            <button type="button" class="btn btn-danger" style="margin:10px;">Отсортировать по цене</button>
+            <button type="button" class="btn btn-warning" style="margin:10px;">Отсортировать по алфавиту</button>
         </div>
 
         <div class="content">
-            {# Здесь должен отображаться каталог с телефонами #}
+            <div class="container">
+                <div class="row">
+                    {% for phone in phones %}
+                    <div class="col-sm">
+                        <div class="card" style="width: 18rem;">
+                            <img src="{{ phone.image }}" alt="{{ phone.name }}" style="height: 540px;">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">{{ phone.id }}</li>
+                                <li class="list-group-item">{{ phone.name }}</li>
+                                <li class="list-group-item">{{ phone.price }}</li>
+                                <li class="list-group-item">{{ phone.release_date }}</li>
+                                <li class="list-group-item">{{ phone.lte_exists }}</li>
+                            </ul>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
