--- a/databases/models_list_displaying/templates/books/book_list.html
+++ b/databases/models_list_displaying/templates/books/book_list.html
@@ -7,17 +7,14 @@
         <div class="header">
             <h1><a href="/books">Каталог</a></h1>
         </div>
-        <div class="row">
-            <div class="book col-md-4">
-                <h2>Сияние</h2>
-                <p>Автор: Стивен Кинг</p>
-                <p>Дата публикации: 2018-09-10</p>
+        {% for bk in list_book %}
+            <div class="row">
+                <div class="book col-md-4">
+                    <h2>{{ bk.name }}</h2>
+                    <p>{{ bk.author }}</p>
+                    <p>{{ bk.pub_date }}</p>
+                </div>    
             </div>
-            <div class="book col-md-4">
-                <h2>1984</h2>
-                <p>Автор: Джордж Оруэл</p>
-                <p>Дата публикации: 2015-03-11</p>
-            </div>
+        {% endfor %}
         </div>
-    </div>
 {% endblock %}
