--- a/databases/models_list_displaying/templates/books/book_list.html
+++ b/databases/models_list_displaying/templates/books/book_list.html
@@ -16,10 +16,7 @@
                 </div>
             </div>
         {% endfor %}
+        <a href="{{ next_page_number }}">{{ books.next_page_number }}</a>
         </div>
+
 {% endblock %}
-
-{% if is_paginated %}
-<a href="#">1111111111111</a>
-
-{% endif %}
