--- a/request-handling/file_server/app/templates/file_content.html
+++ b/request-handling/file_server/app/templates/file_content.html
@@ -5,7 +5,11 @@
     <div class="col s12 m6">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
-          <span class="card-title">{{ file_name }}</span>
+          {% if error %}
+              <span class="card-title">{{ error }}</span>
+          {% else %}
+              <span class="card-title">{{ file_name }}</span>
+          {% endif %}
           <textarea style="height: 40em">{{ file_content|safe }}</textarea>
         </div>
         <div class="card-action">
