--- a/databases/phone_comparison/templates/base.html
+++ b/databases/phone_comparison/templates/base.html
@@ -16,13 +16,19 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script
+              src="https://code.jquery.com/jquery-2.2.4.js"
+              integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+              crossorigin="anonymous"></script>
+    <script type="text/javascript" src="{% static "js/bootstrap.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/base.js" %}"></script>
   </head>
 
   <body>
     {% block content %}{% endblock %}
 
     <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="{% static "js/bootstrap.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/base.js" %}"></script>
+
+
   </body>
 </html>
