--- a/databases/phone_comparison/templates/compression_phones.html
+++ b/databases/phone_comparison/templates/compression_phones.html
@@ -17,16 +17,14 @@
 <div class="container">
     <div class="row">
         <div class="col-sm">
-            <select class="custom-select custom-select-lg col-sm form_phone">
-                <option selected>Open this select menu</option>
+            <select class="custom-select custom-select-lg col-sm form_phone1">
                 {% for phone in phones %}
                 <option value="{{ phone.id }}">{{ phone.brand }} {{ phone.model_name }}</option>
                 {% endfor %}
             </select>
         </div>
         <div class="col-sm">
-            <select class="custom-select custom-select-lg col-sm form_phone">
-                <option selected>Open this select menu</option>
+            <select class="custom-select custom-select-lg col-sm form_phone2">
                 {% for phone in phones %}
                 <option value="{{ phone.id }}">{{ phone.brand }} {{ phone.model_name }}</option>
                 {% endfor %}
@@ -35,11 +33,21 @@
         </div>
         <button class="test" id="test1" type="button" name="button">Test</button>
         <a type="button" href="#">Сравнить</a>
-        <script>
-            $('#test1').on('click', function ()    {
-                console.log('vtyztn');
-            });
-        </script>
+
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            описание
+            {{info_phone}}
+            {% for info in info_phone.values %}
+                <p>{{info}}</p>
+            {% endfor %}
+        </div>
+        <div class="col-sm">
+            описание
+        </div>
     </div>
 </div>
 
