--- a/databases/phone_comparison/templates/base.html
+++ b/databases/phone_comparison/templates/base.html
@@ -15,18 +15,44 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
     <script
               src="https://code.jquery.com/jquery-2.2.4.js"
               integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
               crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{% static "js/bootstrap.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/base.js" %}"></script>
+    <link type="text/javascript" src="{% static "js/bootstrap.js" %}">
+    <link type="text/javascript" src="{% static "js/base.js" %}">
   </head>
 
   <body>
     {% block content %}{% endblock %}
 
+
+    <script type="text/javascript">
+        $('#test1').on('click', function ()    {
+            console.log('test');
+        });
+        $('.form_phone1').on('change', function() {
+              alert( this.value );
+              data = {
+                  'number_phone' : this.value
+              }
+              return $.ajax({
+                  url: '/compression_phones/',
+                  type: 'get',
+                  data: data,
+                  success: function() {
+                      console.log('успех');
+                      
+                }
+
+              })
+        });
+        $('.form_phone2').on('change', function() {
+              alert( this.value );
+        });
+
+    </script>
     <!--JavaScript at end of body for optimized loading-->
 
 
