--- a/databases/phone_comparison/templates/base.html
+++ b/databases/phone_comparison/templates/base.html
@@ -49,6 +49,8 @@
 // another way
     $('a#compression').on('click', function() {
         console.log($('select.form_phone1').val());
+        console.log($('select.form_phone2').val());
+        $('a#compression').attr('href', `?phone1=${$('select.form_phone1').val()}&phone2=${$('select.form_phone2').val()}`);
         data = {
             'phone_1' : $('select.form_phone1').val(),
             'phone_2' : $('select.form_phone2').val()
