--- a/databases/phone_comparison/templates/base.html
+++ b/databases/phone_comparison/templates/base.html
@@ -31,16 +31,17 @@
     <script type="text/javascript">
         var data;
         $('.form_phone1').on('change', function() {
-              data = {
-                  'number_phone' : this.value
-              }
+            data = {
+                'phone_1' : $('select.form_phone1').val(),
+                'phone_2' : $('select.form_phone2').val()
+            }
               return $.ajax({
                   url: '/ajax/',
                   // dataType: text,
                   type: 'get',
                   data: data,
                   success: function(data) {
-                      $('.ajaxes').html(data);
+                      $('.ajaxes').html(data.brand);
                       console.log('пришло ' + data);
 
                 }
@@ -49,23 +50,11 @@
         });
 
 // another way
-    $('a#compression').on('click', function() {
-        console.log($('select.form_phone1').val());
-        console.log($('select.form_phone2').val());
-        $('a#compression').attr('href', `?phone1=${$('select.form_phone1').val()}&phone2=${$('select.form_phone2').val()}`);
-        data = {
-            'phone_1' : $('select.form_phone1').val(),
-            'phone_2' : $('select.form_phone2').val()
-        }
-       //  return $.ajax({
-       //      url: '/compression_phones/',
-       //      type: 'get',
-       //      data: data,
-       //      success: function() {
-       //          console.log('успех');
-       //    }
-       // })
-    })
+    // $('a#compression').on('click', function() {
+    //     console.log($('select.form_phone1').val());
+    //     console.log($('select.form_phone2').val());
+    //     $('a#compression').attr('href', `?phone1=${$('select.form_phone1').val()}&phone2=${$('select.form_phone2').val()}`);
+    // })
     </script>
     <!--JavaScript at end of body for optimized loading-->
 
