--- a/databases/models_list_displaying/templates/books/book_list.html
+++ b/databases/models_list_displaying/templates/books/book_list.html
@@ -16,7 +16,17 @@
                 </div>
             </div>
         {% endfor %}
-        <a href="{{ next_page_number }}">{{ books.next_page_number }}</a>
+        <div class="">
+            {% if prev_date %}
+                <a class="" href={{ prev_date }}>< {{ prev_date }}</a>
+            {% endif %}
+            {% if next_date %}
+                <a class="" href={{ next_date }}>{{ next_date }} ></a>
+            {% endif %}
         </div>
+
+
+
+
 
 {% endblock %}
